:lipstick: Chore: 仮トップページにdaisyUIのThemeを適用

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1 class="text-sky-600 text-4xl font-bold">Hello world!</h1>
+<h1 class="text-4xl font-bold">Hello world!</h1>
 <p>Find me in app/views/static_pages/home.html.erb</p>
+
+<button class="btn">Button</button>
+<button class="btn btn-neutral">Neutral</button>
+<button class="btn btn-primary">Primary</button>
+<button class="btn btn-secondary">Secondary</button>
+<button class="btn btn-accent">Accent</button>
+<button class="btn btn-ghost">Ghost</button>
+<button class="btn btn-link">Link</button>
