:sparkles: Feat: 仮アバター画像の設定

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
       <div class="dropdown dropdown-end">
         <label tabindex="0" class="btn btn-ghost btn-circle avatar">
           <div class="w-10 rounded-full">
-            <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+            <%= image_tag 'K1Ey1wwTeYA6YQM1698909468_1698909495.png' %>
           </div>
         </label>
         <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 border-primary rounded-box w-52">
@@ -25,7 +25,7 @@
       <%= link_to new_user_session_path, class: "btn btn-ghost btn-circle avatar" do %>
         <label tabindex="0" class="btn btn-ghost btn-circle avatar">
           <div class="w-10 rounded-full">
-            <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+            <%= image_tag 'K1Ey1wwTeYA6YQM1698909468_1698909495.png' %>
           </div>
         </label>
       <% end %>
