--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar bg-base-100">
   <div class="flex-1">
-    <a class="btn btn-ghost normal-case text-2xl text-primary font-black">Mutro</a>
+    <a><%= link_to 'Mutro', root_path, class: "btn btn-ghost normal-case text-2xl text-primary font-black" %></a>
   </div>
   <div class="flex-none gap-2">
     <% if user_signed_in? %>
@@ -18,6 +18,7 @@
           <li class="text-primary">My Playlists</li>
           <li class="text-primary">My GoodVibes</li>
           <li class="text-base font-bold text-primary">Settings</li>
+          <li><%= link_to 'My Page', "users/#{current_user.id}", class: "text-primary" %></li>
           <li><%= link_to 'Log Out', destroy_user_session_path, data: { turbo_method: :delete }, class: "font-bold text-error" %></li>
         </ul>
       </div>
