--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,7 +18,7 @@
           <li class="text-primary">My Playlists</li>
           <li class="text-primary">My GoodVibes</li>
           <li class="text-base font-bold text-primary">Settings</li>
-          <li><%= link_to 'My Page', "users/#{current_user.id}", class: "text-primary" %></li>
+          <li><%= link_to 'My Page', user_path(current_user), class: "text-primary" %></li>
           <li><%= link_to 'Log Out', destroy_user_session_path, data: { turbo_method: :delete }, class: "font-bold text-error" %></li>
         </ul>
       </div>
