--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
-users#show
+<h1><%= current_user.name%>'s My Page</h1>
+<p>ユーザーID: <%= current_user.id %></p>
+<div class="btn btn-sm btn-outline btn-primary">プロフィール編集</div>
+
