--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100">
+<div class="navbar bg-base-100 pb-24">
   <div class="flex-1">
     <a><%= link_to 'Mutro', root_path, class: "btn btn-ghost normal-case text-2xl text-primary font-black" %></a>
   </div>
