--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,12 @@
-<h1><%= current_user.name%>'s My Page</h1>
-<p>ユーザーID: <%= current_user.id %></p>
-<div class="btn btn-sm btn-outline btn-primary">プロフィール編集</div>
-
+<div class="avatar">
+  <div class="w-40 rounded-full">
+    <%= image_tag 'K1Ey1wwTeYA6YQM1698909468_1698909495.png' %>
+  </div>
+</div>
+<div>
+  <%= current_user.name %>
+  <p>ユーザーID: <%= current_user.id %></p>
+</div>
+<% if user_signed_in? %>
+  <%= link_to 'プロフィール編集', edit_user_registration_path, class: 'btn btn-sm btn-outline btn-primary' %>
+<% end %>
