--- a/app/views/tracks/_search_results.html.erb
+++ b/app/views/tracks/_search_results.html.erb
@@ -1,15 +1,13 @@
-  <!-- 曲検索結果の表示 -->
+<%= turbo_frame_tag "search_results" do %>
   <div id="search-results">
     <% if @tracks.present? %>
       <div class="mt-4">
         <h2 class="text-center font-bold">検索結果</h2>
         <div class="flex flex-wrap justify-center">
-          <% @tracks.each do |track| %>
+          <% @tracks.take(9).each do |track| %>
             <div class="flex justify-center p-2 ml-2 w-1/4">
               <% if track.id %>
                 <iframe loading="lazy" src="https://open.spotify.com/embed/track/<%= track.id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                <!-- プレイリストへの追加ボタン -->
-                <%= button_to 'この曲をプレイリストに追加', add_track_to_playlist_path(track_id: track.id), method: :post, class: "btn btn-primary" %>
               <% end %>
             </div>
           <% end %>
@@ -17,3 +15,4 @@
       </div>
     <% end %>
   </div>
+<% end %>
