:art: Chore: ヘッダーのボタンのスタイリングを微調整

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="flex-none gap-2">
     <% if user_signed_in? %>
-      <%= link_to new_playlist_path, class: "btn btn-square btn-outline btn-primary" do %>
+      <%= link_to new_playlist_path, class: "btn btn-sm btn-outline btn-primary" do %>
         作成
       <% end %>
       <%= link_to search_tracks_path, class: "btn btn-ghost btn-circle" do %>
