--- a/app/views/tracks/_search_form.html.erb
+++ b/app/views/tracks/_search_form.html.erb
@@ -1,7 +1,7 @@
-<%= turbo_frame_tag 'search_form' do %>
+<%= turbo_frame_tag 'search_form_frame' do %>
   <%= form_with url: search_tracks_path, method: :get, data: { turbo_frame: 'search_results' } do |f| %>
     <div class="mt-4 flex justify-center">
-      <%= f.search_field :search, value: params[:search], placeholder: "アーティスト名 or 曲名で検索してください", class: "w-1/2 p-3 mx-auto text-sm border-primary rounded-lg bg-slate-50 border-2", type: "text", autofocus: true %>
+      <%= f.search_field :search, value: params[:search], placeholder: "アーティスト名 or 曲名で検索してください", class: "w-1/2 p-3 mx-auto text-sm border-primary rounded-lg bg-slate-50 border-2", type: "text", autofocus: true, required: true %>
     </div>
   <% end %>
 <% end %>
