--- a/app/views/tracks/_search_results.html.erb
+++ b/app/views/tracks/_search_results.html.erb
@@ -7,7 +7,8 @@
           <% @tracks.each do |track| %>
             <div class="flex justify-center p-1 ml-2 w-1/4">
               <% if track.id %>
-                <iframe loading="lazy" src="https://open.spotify.com/embed/track/<%= track.id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed/track/<%= track.id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <%= button_to 'Add', add_track_to_playlist_playlists_path(track_id: track.id), method: :post, data: { turbo_frame: "playlist_preview" }, class: "p-1 btn btn-sm btn-outline btn-primary" %>
               <% end %>
             </div>
           <% end %>
