--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,4 +1,17 @@
-<div class="bg-white p-8 rounded-lg text-center w-full">
-  <h1 class="text-4xl font-bold mb-4 text-accent">Hello Mutro!</h1>
-  <p class="text-gray-700 mb-4">Welcome to Mutro. Explore and enjoy our features.</p>
+<div class="container mx-auto px-4">
+  <h1 class="text-xl font-bold text-center my-8">プレイリスト一覧</h1>
+  
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-16">
+    <% @playlists.each do |playlist| %>
+      <div class="bg-white shadow-lg rounded-lg p-4 h-full flex flex-col">
+        <h2 class="text-center text-lg font-bold mb-2">
+          <%= link_to playlist.title, playlist_path(playlist), class: "text-blue-500 hover:text-blue-700" %>
+        </h2>
+        <p class="text-center text-sm text-gray-600">ユーザー：<%= playlist.user.name %></p>
+        <div class="mt-auto">
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
+
