:zap: Feat: 一覧画面でプレイリスト画像が表示されるように変更

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -4,12 +4,15 @@
   <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-16">
     <% @playlists.each do |playlist| %>
       <div class="bg-white shadow-lg rounded-lg p-4 h-full flex flex-col">
+        <% if playlist.tracks.any? %>
+          <div class="text-center mb-2">
+            <%= image_tag(playlist.tracks.first.image_url || 'default-playlist-image.png', class: "w-full h-auto") %>
+          </div>
+        <% end %>
         <h2 class="text-center text-lg font-bold mb-2">
           <%= link_to playlist.title, playlist_path(playlist), class: "text-primary hover:text-blue-700" %>
         </h2>
         <p class="text-center text-sm text-gray-600">ユーザー：<%= playlist.user.name %></p>
-        <div class="mt-auto">
-        </div>
       </div>
     <% end %>
   </div>
