--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -22,11 +22,14 @@
       <p class="text-gray-600">This playlist has no tracks yet.</p>
     <% end %>
   </div>
-  <% if @playlist.user == current_user %>
-    <%= link_to 'プレイリスト編集', edit_playlist_path(@playlist), class: 'btn btn-primary m-4' %>
-  <% if current_user == @playlist.user %>
-  <%= link_to 'プレイリストを削除', playlist_path(@playlist), data: { turbo_method: :delete, turbo_confirm: 'プレイリストを削除しますか？' }, class: "btn btn-error text-white" %>
-<% end %>
-<% end %>
+    <% if @playlist.user == current_user %>
+      <%= link_to 'プレイリスト編集', edit_playlist_path(@playlist), class: 'btn btn-primary m-4' %>
+    <% if current_user == @playlist.user %>
+      <%= link_to 'プレイリストを削除', playlist_path(@playlist), data: { turbo_method: :delete, turbo_confirm: 'プレイリストを削除しますか？' }, class: "btn btn-error text-white" %>
+    <% end %>
+  <% end %>
+  <div class="flex justify-center mt-8">
+  <%= link_to '一覧に戻る', root_path, class: 'btn btn-outline btn-primary rounded-lg' %>
+  </div>
 </div>
 
