:zap: Feat: ヘッダーにMy Playlists用のリンクを追加

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="flex-none gap-2">
     <% if user_signed_in? %>
+      <%= link_to 'my playlists', my_playlists_path, class: "btn btn-sm btn-outline btn-primary" %>
       <%= link_to new_playlist_path, class: "btn btn-sm btn-outline btn-primary" do %>
         作成
       <% end %>
