:art: Chore: スタイリング調整

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar bg-base-100 pb-24 border-b border-primary">
   <div class="flex-1">
-    <a><%= link_to 'Mutro', root_path, class: "btn btn-ghost normal-case text-2xl text-primary font-black" %></a>
+    <a><%= link_to 'Mutro', root_path, class: "btn btn-ghost normal-case text-2xl text-white font-black bg-gradient-to-r from-primary to-accent" %></a>
   </div>
   <div class="flex-none gap-2">
     <% if user_signed_in? %>
