--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,8 +16,8 @@
         </label>
         <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 border-primary rounded-box w-52">
           <li class="text-base font-bold text-primary">Playlists</li>
-          <li class="text-primary">My Playlists</li>
-          <li class="text-primary">My GoodVibes</li>
+          <li class="text-primary"><%= link_to 'My Playlists', my_playlists_path %></li>
+          <li class="text-primary"><%= link_to 'My GoodVibes', '#' %></li>
           <li class="text-base font-bold text-primary">Settings</li>
           <li><%= link_to 'My Page', user_path(current_user), class: "text-primary" %></li>
           <li><%= link_to 'Log Out', destroy_user_session_path, data: { turbo_method: :delete }, class: "font-bold text-error" %></li>
