--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,9 +33,9 @@
   </div>
 
   <div>
-    <%= f.submit "更新", class: 'btn btn-success mt-2 mb-2' %>
+    <%= f.submit "更新", class: 'btn btn-sm btn-primary mt-2 mb-2' %>
   </div>
 <% end %>
 
-<div><%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: 'btn btn-error text-white mb-2' %></div>
-<%= link_to "My Page", user_path(current_user), class: 'btn btn-sm btn-outline btn-primary'  %>
+<div><%= button_to "アカウントを削除", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: 'btn btn-sm btn-error text-white mb-2' %></div>
+<div class=" flex justify-center"><%= link_to "My Page", user_path(current_user), class: 'btn btn-sm btn-outline btn-primary mt-4' %></div>
