:art: Chore: スタイリング微調整

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,10 +25,10 @@
   <div class="mb-8">
     <ul class="flex border-b border-primary">
       <li class="-mb-px mr-1">
-        <a class="bg-white inline-block py-2 px-4 text-primary font-bold" href="#">My Good Vibes</a>
+        <a class="bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" href="#">My Good Vibes</a>
       </li>
       <li class="mr-1">
-        <a class="bg-white inline-block py-2 px-4 text-primary font-bold" href="#">My Comments</a>
+        <a class="bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" href="#">My Comments</a>
       </li>
     </ul>
   </div>
