--- a/app/views/playlists/my_playlists.html.erb
+++ b/app/views/playlists/my_playlists.html.erb
@@ -16,7 +16,7 @@
         <h2 class="text-center text-lg font-bold mb-2">
           <%= link_to playlist.title, playlist_path(playlist), class: "text-primary hover:text-blue-700" %>
         </h2>
-        <p class="text-center text-sm text-gray-600">Released by: <%= playlist.user.name %></p>
+        <p class="text-center text-sm text-gray-600">Released by: <%= current_user.name %></p>
       </div>
     <% end %>
   </div>
