--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,9 +8,13 @@
     </div>
     <div class="flex-1 md:ml-6">
       <p class="font-bold mb-4">About Me</p>
-      <div class="bg-white shadow-lg p-4 mb-4">
-        <p class="text-gray-600"></p>
-      </div>
+        <div class="bg-white shadow-lg p-4 mb-4">
+          <% if current_user.bio.present? %>
+            <p class="text-gray-600"><%= current_user.bio %></p>
+          <% else %>
+            <p class="text-gray-600">プロフィール情報はありません。</p>
+          <% end %>
+        </div>
       <div class="flex flex-col md:flex-row md:items-center">
         <div class="ml-8">
           <% if user_signed_in? %>
