--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,12 +1,11 @@
 <div class="container mx-auto my-8 p-4">
-  <!-- プレイリストのタイトルと説明 -->
+
   <div class="mb-6">
     <h1 class="text-3xl font-bold mb-2"><%= @playlist.title %></h1>
     <%= simple_format(@playlist.description, {}, wrapper_tag: "p", class: "text-gray-600") %>
 
   </div>
 
-  <!-- プレイリストのトラック一覧 -->
   <div class="tracks">
     <% if @playlist.tracks.any? %>
       <h2 class="text-2xl font-semibold mb-4">Tracks</h2>
@@ -33,3 +32,25 @@
   </div>
 </div>
 
+<div class="comments mt-8">
+  <h3 class="text-2xl font-bold mb-4">Comments</h3>
+  <div class="space-y-4">
+    <% @playlist.comments.each do |comment| %>
+      <div class="p-4 bg-white rounded-lg shadow">
+        <p class="font-bold text-primary mb-2"><%= comment.user.name %></p>
+        <div class="chat chat-start">
+          <div class="chat-bubble bg-gradient-to-r from-primary to-accent text-white"><%= simple_format(comment.content) %></div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+  <% if user_signed_in? %>
+    <div class="mt-6 bg-white p-6 rounded-lg shadow">
+      <%= form_with(model: [ @playlist, Comment.new ], class: "space-y-4") do |form| %>
+        <%= form.text_area :content, rows: 3, placeholder: "コメントを入力してください", class: "w-full p-2 border border-gray-300 rounded-lg focus:ring-primary focus:border-primary" %>
+        <%= form.submit "コメントする", class: "btn btn-outline btn-primary py-2 px-4" %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
