:art: Chore: MyCommentsのリンクを途中まで作成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
         <%= link_to 'My Good Vibes', good_vibes_user_path(current_user), class: "bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" %>
       </li>
       <li class="mr-1">
-        <a class="bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" href="#">My Comments</a>
+        <%= link_to 'My Comments', "#", class: "bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" %>
       </li>
     </ul>
   </div>
