:sparkles: Feat: お問い合わせフォームのリンクを追加

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
   <div class="footer-title text-secondary">
     <%= link_to 'About Mutro', about_path %>
   </div> 
-    <%= link_to 'お問い合わせ', '#' %> 
+    <%= link_to 'お問い合わせ', 'https://forms.gle/BL9XpXKsqMpg4zgJA' %> 
     <%= link_to '利用規約', terms_path %> 
     <%= link_to 'プライバシーポリシー', privacy_policy_path %>
     </div>
