--- a/app/views/static_pages/terms.html.erb
+++ b/app/views/static_pages/terms.html.erb
@@ -1,1 +1,48 @@
-利用規約
+<div class="min-h-screen py-10">
+  <div class="container mx-auto px-4">
+    <h1 class="text-3xl font-black text-center text-gray-800 mb-8">利用規約</h1>
+    <div class="bg-white rounded-lg shadow-md p-6">
+      <h2 class="text-xl font-bold text-gray-700 mb-4">第1条（適用）</h2>
+      <p class="text-gray-600 mb-4">
+        本規約は、Mutro（以下、「本サービス」という）を提供する運営者と、本サービスの利用者との間の全ての関係に適用されるものとします。
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mb-4">第2条（アカウントの登録）</h2>
+      <p class="text-gray-600 mb-4">
+        利用者は、本サービスを利用するにあたり、登録手続を行うものとします。利用者は、実際に存在する情報を用いて登録手続きを行うものとし、虚偽の情報を用いた場合、アカウントを削除することができます。
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mb-4">第3条（禁止行為）</h2>
+      <p class="text-gray-600 mb-4">
+        本サービス上で以下の行為を禁止します。
+        <ul class="list-disc ml-5 space-y-2">
+          <li>法令または公序良俗に違反する行為</li>
+          <li>犯罪行為に関連する行為</li>
+          <li>運営者、他の利用者、または第三者の知的財産権を侵害する行為</li>
+          <li>運営者、他の利用者、または第三者を誹謗中傷する行為</li>
+          <li>その他、運営者が不適切と判断する行為</li>
+        </ul>
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mt-4 mb-4">第4条（プライバシーとデータの取り扱い）</h2>
+      <p class="text-gray-600 mb-4">
+        運営者は、利用者の個人情報を適切に取り扱うものとし、プライバシーポリシーに則って管理します。利用者は、自らが投稿した内容について責任を持つものとします。
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mb-4">第5条（免責事項）</h2>
+      <p class="text-gray-600 mb-4">
+        運営者は、本サービスの中断、停止、または変更、利用者が本サービスに送信した情報の削除または消失、利用者が本サービスの利用によって被った損害等について、一切の責任を負わないものとします。何らかの理由で運営者が責任を負う場合でも、その責任は利用者に対して実際に支払われた金額に限定されるものとします。
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mb-4">第6条（規約の変更）</h2>
+      <p class="text-gray-600 mb-4">
+        運営者は、必要と判断した場合には、利用者に通知することなく本規約を変更することができるものとします。本規約の変更後に本サービスを利用した場合、変更後の規約に同意したものとみなされます。
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mb-4">第7条（適用法および合意管轄）</h2>
+      <p class="text-gray-600">
+        本規約の解釈にあたっては、日本法を適用するものとします。本サービスに関して紛争が生じた場合には、運営者の所在地を管轄する裁判所を専属的な管轄裁判所とします。
+      </p>
+    </div>
+  </div>
+</div>
