:sparkles: Feat: プライバシーポリシーを追加

--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -1,1 +1,51 @@
-プライバシーポリシー
+<div class="min-h-screen py-10">
+  <div class="container mx-auto px-4">
+    <h1 class="text-3xl font-semibold text-center text-gray-800 mb-8">プライバシーポリシー</h1>
+    <div class="bg-white rounded-lg shadow-md p-6">
+      <h2 class="text-xl font-bold text-gray-700 mb-4">第1条（総則）</h2>
+      <p class="text-gray-600 mb-4">
+        本プライバシーポリシーは、Mutro（以下、「本サービス」という）における個人情報およびその他の情報の取り扱いについて定めるものです。
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mb-4">第2条（収集する情報）</h2>
+      <p class="text-gray-600 mb-4">
+        本サービスは、以下の情報を収集することがあります。
+        <ul class="list-disc ml-5 space-y-2">
+          <li>利用者の登録情報（名前、メールアドレスなど）</li>
+          <li>利用者が本サービスを利用する際に生成される情報（利用履歴、IPアドレス、クッキー情報など）</li>
+        </ul>
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mt-4 mb-4">第3条（情報の利用目的）</h2>
+      <p class="text-gray-600 mb-4">
+        収集した情報は、以下の目的で利用されます。
+        <ul class="list-disc ml-5 space-y-2">
+          <li>本サービスの提供・運営のため</li>
+          <li>利用者からのお問い合わせに対する対応のため</li>
+          <li>本サービスの改善や新サービスの開発のため</li>
+          <li>利用者に適した広告の配信のため</li>
+        </ul>
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mt-4 mb-4">第4条（情報の第三者提供）</h2>
+      <p class="text-gray-600 mb-4">
+        運営者は、以下の場合を除き、収集した情報を第三者に提供することはありません。
+        <ul class="list-disc ml-5 space-y-2">
+          <li>法令に基づく場合</li>
+          <li>利用者の同意がある場合</li>
+          <li>利用者の権利や財産を保護するために必要と判断される場合</li>
+        </ul>
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mt-4 mb-4">第5条（情報の管理）</h2>
+      <p class="text-gray-600 mb-4">
+        運営者は、収集した情報のセキュリティを保護するために合理的な安全対策を講じます。
+      </p>
+
+      <h2 class="text-xl font-bold text-gray-700 mb-4">第6条（プライバシーポリシーの変更）</h2>
+      <p class="text-gray-600">
+        本プライバシーポリシーは、運営者の判断により予告なく変更されることがあります。変更後のプライバシーポリシーについては、本サービス内で適宜公開します。
+      </p>
+    </div>
+  </div>
+</div>
