--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,20 +1,19 @@
 <div class="navbar bg-base-100 pb-24 border-b border-primary">
   <div class="flex-1">
-    <a><%= link_to 'Mutro', root_path, class: "btn btn-ghost normal-case text-2xl text-white font-black bg-gradient-to-r from-primary to-accent" %></a>
+    <%= link_to 'Mutro', root_path, class: "btn btn-ghost normal-case text-2xl text-white font-black bg-gradient-to-r from-primary to-accent" %>
   </div>
   <div class="flex-none gap-2">
     <% if user_signed_in? %>
       <%= link_to 'my playlists', my_playlists_path, class: "btn btn-sm btn-outline btn-primary" %>
-    <%= link_to new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" do %>
-    Release
-    <% end %>
+      <%= link_to new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" do %>
+        Release
+      <% end %>
       <div class="dropdown dropdown-end">
         <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-          <div class="w-10 rounded-full">
-            <%= image_tag 'K1Ey1wwTeYA6YQM1698909468_1698909495.png' %>
+          <div class="w-10 h-10 rounded-full bg-primary">
           </div>
         </label>
-        <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 border-primary rounded-box w-52">
+         <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 border-primary rounded-box w-52">
           <li class="text-base font-bold text-primary">Playlists</li>
           <li class="text-primary"><%= link_to 'My Playlists', my_playlists_path %></li>
           <li class="text-primary"><%= link_to 'My GoodVibes', good_vibes_user_path(current_user) %></li>
@@ -25,12 +24,12 @@
       </div>
     <% else %>
       <%= link_to new_user_session_path, class: "btn btn-ghost btn-circle avatar" do %>
-        <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-          <div class="w-10 rounded-full">
-            <%= image_tag 'K1Ey1wwTeYA6YQM1698909468_1698909495.png' %>
+        <div class="avatar">
+          <div class="w-10 h-10 rounded-full bg-error">
           </div>
-        </label>
+        </div>
       <% end %>
     <% end %>
   </div>
 </div>
+
