:art: Chore: スタイリング等調整

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -24,7 +24,9 @@
       </div>
       <div class="text-gray-600">
         <p class="text-center text-xl font-bold mb-2">プレイリストをリリースするには？</p>
-        <p class="text-center text-lg">ログイン後、ヘッダー右上の「RELEASE」ボタンからプレイリストの作成が行えます。</p>
+        <p class="text-lg">ログイン後、ヘッダー右上の「RELEASE」ボタンからプレイリストの作成が行えます。</p>
+        <p class="text-lg">検索フォームで曲を検索 → プレイリストに追加したい曲の"ADDボタン"をクリック → プレイリストに追加されます。</p>
+        <p class="text-lg">プレイリストのタイトルと説明を入力 → "RELEASE A PLAYLIST!"をクリック → プレイリストリリース完了です。</p>
       </div>
       <p class="text-gray-600 text-center text-amber-500 text-lg font-bold mt-4">
         Mutroで、いつもより少しだけゆっくり音楽と向き合ってみませんか？
