--- a/app/views/playlists/my_playlists.html.erb
+++ b/app/views/playlists/my_playlists.html.erb
@@ -3,7 +3,7 @@
   
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-16">
     <% @playlists.each do |playlist| %>
-      <div class="bg-white shadow-lg rounded-lg p-2 h-auto flex flex-col">
+      <div class="bg-white shadow-lg rounded-lg p-2 h-auto flex flex-col transition-transform duration-300 hover:-translate-y-2 hover:rotate-[-3deg]">
         <% if playlist.tracks.any? %>
           <div class="text-center mb-2">
             <%= image_tag(playlist.tracks.first.image_url || 'default-playlist-image.png', class: "w-3/4 h-auto mx-auto") %>
@@ -14,9 +14,11 @@
           </div>
         <% end %>
         <h2 class="text-center text-lg font-bold mb-2">
-          <%= link_to playlist.title, playlist_path(playlist), class: "text-primary hover:text-blue-700" %>
+          <%= link_to playlist.title, playlist_path(playlist), class: "text-primary" %>
         </h2>
-        <p class="text-center text-sm text-gray-600">Released by: <%= current_user.name %></p>
+        <p class="text-sm text-gray-600">Released by：<%= playlist.user.name %></p>
+        <p class="text-sm text-gray-600">Released on：<%= playlist.created_at.strftime("%Y/%m/%d") %></p>
+        <p class="text-sm text-gray-600">Tracks：<%= playlist.tracks.count %></p>
       </div>
     <% end %>
   </div>
