:sparkles: Feat: ページネーションを追加

--- a/app/views/users/good_vibes.html.erb
+++ b/app/views/users/good_vibes.html.erb
@@ -5,3 +5,7 @@
       <%= render 'playlists/playlist', playlist: playlist %>
     <% end %>
   </div>
+
+  <div>
+    <%= paginate @good_vibed_playlists %>
+  </div>
