--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container mx-auto px-4">
   <h1 class="text-xl font-bold text-primary text-center border-b border-primary my-8">All Playlists</h1>
   
-  <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-16">
+  <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8">
     <% @playlists.each do |playlist| %>
       <%= render 'playlists/playlist', playlist: playlist %>
     <% end %>
   </div>
 </div>
 
-<div>
+<div class="flex justify-center">
   <%= paginate @playlists %>
 </div>
 
