--- a/app/views/tracks/_search_results.html.erb
+++ b/app/views/tracks/_search_results.html.erb
@@ -2,13 +2,15 @@
   <div id="search-results">
     <% if @tracks.present? %>
       <div class="mt-4">
-        <h2 class="text-center font-bold">検索結果</h2>
+        <h2 class="text-center font-bold text-primary">search results</h2>
         <div class="flex flex-wrap justify-center">
           <% @tracks.each do |track| %>
-            <div class="flex justify-center p-1 ml-2 w-1/4">
+            <div class="flex justify-center p-1 ml-2 w-1/4 mx-8">
               <% if track.id %>
-                <iframe src="https://open.spotify.com/embed/track/<%= track.id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                <%= button_to 'Add', add_track_to_playlist_playlists_path(track_id: track.id), method: :post, data: { turbo_frame: "playlist_preview" }, class: "p-1 btn btn-sm btn-outline btn-primary" %>
+                <div class="flex flex-col items-center md:flex-row md:justify-between md:items-end w-full">
+                  <iframe src="https://open.spotify.com/embed/track/<%= track.id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                  <%= button_to 'add', add_track_to_playlist_playlists_path(track_id: track.id), method: :post, data: { turbo_frame: "playlist_preview" }, class: "p-1 btn btn-sm btn-outline btn-primary" %>
+                </div>
               <% end %>
             </div>
           <% end %>
@@ -16,4 +18,5 @@
       </div>
     <% end %>
   </div>
-<% end %>
+<% end %> 
+
