--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -12,7 +12,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <% @playlist.tracks.each do |track| %>
           <div class="track bg-white rounded-lg shadow p-4">
-            <iframe src="https://open.spotify.com/embed/track/<%= track.spotify_id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <%= render 'playlists/track', track: track %>
             <p class="mt-2 text-sm font-medium text-gray-800"><%= track.title %> - <%= track.artist %></p>
           </div>
         <% end %>
