--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="flex justify-center">
+<div class="flex justify-center text-gray-600">
   <%= paginate @playlists %>
 </div>
 
