:art: Chore: スタイリング微調整

--- a/app/views/tracks/_search_results.html.erb
+++ b/app/views/tracks/_search_results.html.erb
@@ -2,7 +2,7 @@
   <div id="search-results">
     <% if @tracks.present? %>
       <div class="mt-4">
-        <h2 class="text-center font-bold text-primary">search results</h2>
+        <h2 class="text-center font-bold text-primary mb-2">Search Results</h2>
         <div class="flex flex-wrap justify-center">
           <% @tracks.each do |track| %>
             <div class="flex justify-center p-1 ml-2 w-1/4 mx-8">
