--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="flex-1 md:ml-6">
       <p class="font-bold mb-4">About Me</p>
-        <div class="bg-white shadow-lg p-4 mb-4">
+        <div class="bg-slate-100 shadow-lg p-4 mb-4">
           <% if current_user.bio.present? %>
             <p class="text-gray-600"><%= current_user.bio %></p>
           <% else %>
