:sparkles: Feat: プレイリスト自体にリンク判定を実装

--- a/app/views/playlists/_playlist.html.erb
+++ b/app/views/playlists/_playlist.html.erb
@@ -1,18 +1,19 @@
-<div class="bg-slate-50 outline outline-1 outline-primary shadow-lg rounded-lg p-2 h-auto m-2 flex flex-col transition-transform duration-300 hover:-translate-y-2 hover:rotate-[-3deg]">
-  <div class="text-center m-2">
-    <% if playlist.tracks.first.present? && playlist.tracks.first.image_url.present? %>
-      <%= image_tag(playlist.tracks.first.image_url, class: "w-3/4 h-auto mx-auto rounded-full") %>
-    <% else %>
-      <%= image_tag('default-playlist-image.png', class: "w-3/4 h-auto mx-auto rounded-full") %>
-    <% end %>
+<%= link_to playlist_path(playlist) do %>
+  <div class="bg-slate-50 outline outline-1 outline-primary shadow-lg rounded-lg p-2 h-auto m-2 flex flex-col transition-transform duration-300 hover:-translate-y-2 hover:rotate-[-3deg]">
+    <div class="text-center m-2">
+      <% if playlist.tracks.first.present? && playlist.tracks.first.image_url.present? %>
+        <%= image_tag(playlist.tracks.first.image_url, class: "w-3/4 h-auto mx-auto rounded-full") %>
+      <% else %>
+        <%= image_tag('default-playlist-image.png', class: "w-3/4 h-auto mx-auto rounded-full") %>
+      <% end %>
+    </div>
+    <h2 class="text-center text-lg font-bold text-secondary mb-2">
+      <%= playlist.title %>
+    </h2>
+    <div class="text-sm text-gray-500">
+      <p>Released by：<%= playlist.user.name %></p>
+      <p>Released on：<%= playlist.created_at.strftime("%Y/%m/%d") %></p>
+      <p>Tracks：<%= playlist.tracks.count %></p>
+    </div>
   </div>
-  <h2 class="text-center text-lg font-bold mb-2">
-    <%= link_to playlist.title, playlist_path(playlist), class: "text-primary" %>
-  </h2>
-  <div class="text-sm text-gray-500">
-    <p>Released by：<%= playlist.user.name %></p>
-    <p>Released on：<%= playlist.created_at.strftime("%Y/%m/%d") %></p>
-    <p>Tracks：<%= playlist.tracks.count %></p>
-  </div>
-</div>
-
+<% end %>
