:art: Chore: スタイリング微調整

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
-<footer class="footer p-10 bg-base-100 text-base-content bg-slate-50">
+<footer class="footer p-10 bg-base-100 text-base-content">
   <aside>
-    <p>Copyright © 2023 - All right reserved by Mutro</p>
+    <p class="text-slate-500">Copyright © 2023 - All right reserved by Mutro</p>
   </aside>
   <div class="footer-title text-secondary">
     <%= link_to 'About Mutro', about_path %>
