:art: Chore: descriptionのplaceholderの文言を修正

--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -27,7 +27,7 @@
 
       <div class="w-full text-center p-2 mt-4">
         <%= f.label :description, class: "text-lg font-bold text-primary" %>
-        <%= f.text_area :description, required: true, placeholder: "30文字以上でプレイリストを聴いてほしいシチュエーションや、選んだ曲への思いを自由に綴ってください",  class: "form-control w-full h-64 border-2 border-primary p-2 rounded-lg" %>
+        <%= f.text_area :description, required: true, placeholder: "プレイリストを聴いてほしいシチュエーションや、選んだ曲への思いを自由に綴ってください",  class: "form-control w-full h-64 border-2 border-primary p-2 rounded-lg" %>
       </div>
 
       <div class="w-full p-2 mt-4">
