--- a/app/views/users/good_vibes.html.erb
+++ b/app/views/users/good_vibes.html.erb
@@ -1,5 +1,5 @@
 <div class="container mx-auto px-4">
-  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">My Good Vibes</h1>
+  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">MY GOOD VIBES</h1>
   
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-16">
     <% @good_vibed_playlists.each do |playlist| %>
