--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,3 @@
-<div class="text-primary font-bold m-4">
-  ユーザー名：<%= current_user.name %>
-</div>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -43,4 +39,4 @@
 <% end %>
 
 <div><%= button_to "アカウントを削除", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: 'btn btn-sm btn-error text-white mb-2' %></div>
-<div class=" flex justify-center"><%= link_to "My Page", user_path(current_user), class: 'btn btn-sm btn-outline btn-primary mt-4' %></div>
+<div class=" flex justify-center"><%= link_to "Back to MY PAGE", user_path(current_user), class: 'btn btn-sm btn-outline btn-primary mt-4' %></div>
