--- a/app/views/playlists/new_releases.html.erb
+++ b/app/views/playlists/new_releases.html.erb
@@ -1,5 +1,5 @@
 <div class="container mx-auto px-4">
-  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">New Releases</h1>
+  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">NEW RELEASES</h1>
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8">
     <% @playlists.each do |playlist| %>
       <%= render 'playlists/playlist', playlist: playlist %>
