--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,10 +27,10 @@
   <div class="mb-8">
     <ul class="flex border-b border-primary">
       <li class="-mb-px mr-1">
-        <%= link_to 'My Good Vibes', good_vibes_user_path(current_user), class: "bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" %>
+        <%= link_to 'MY GOOD VIBES', good_vibes_user_path(current_user), class: "bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" %>
       </li>
       <li class="mr-1">
-        <%= link_to 'My Comments', "#", class: "bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" %>
+        <%= link_to 'MY COMMENTD', "#", class: "bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" %>
       </li>
     </ul>
   </div>
