:art: Chore: 曲数制限を明記

--- a/app/views/playlists/_playlist_preview.html.erb
+++ b/app/views/playlists/_playlist_preview.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "playlist_tracks" do %>
   <div id="playlist-tracks">
-    <p class="text-center font-bold">Playlist</p>
+    <p class="text-center font-bold">Playlist ※5~20曲まで</p>
     <% @playlist.tracks.each do |track| %>
       <%= turbo_frame_tag dom_id(track) do %>
         <%= render "playlists/track", track: track %>
